preparing for pages2

--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 .container {
-  height: 40%;
+  /*height: 40%;
   margin: 40% auto;
-  width: 405;
+  width: 405;*/
 }
 .cell{
-  border-color: black;
+  /*border-color: black;
   border:1px;
   border-width: thin;
   border-style:dotted;
@@ -12,13 +12,14 @@
   box-sizing: border-box;
   float: left;
   height: 16px;
-  width: 16px;
+  width: 16px;*/
 }
 
 #map{
-  height: 450px;
-  margin-left: 20%;
-  width: 800px;
+  margin-top: 1%;
+  height: 600px;
+  margin-left: 5%;
+  width: 900px;
   background-color: #000011;
   border:1px  solid #CCC;
   border-left: none;
@@ -26,29 +27,43 @@
   position: relative;
 }
 #player1{
-background-image:url("img/Tank1.gif");
+background-image:url("../img/Tank1.gif");
+top:4%;
 width: 80px;
 height: 100px;
+position: absolute;
 
 }
 #player2{
-  background-image:url("img/Tank2.gif");
+  background-image:url("../img/Tank2.gif");
+  top:4%;
+  right:19%;
   width: 80px;
   height: 100px;
+  position: absolute;
 }
 #bullet1{
-  background-image:url("img/Bullet1.gif");
+  background-image:url("../img/Bullet1.gif");
+  top:3%;
+  left:14%;
   width: 20px;
   height: 20px;
+  position: absolute;
 }
 #bullet2{
-  background-image:url("img/Bullet2.gif");
+  top:3%;
+  left: 20%;
+  background-image:url("../img/Bullet2.gif");
   width: 20px;
   height: 20px;
+  position: absolute;
 }
 .wall{
-  background-image:url("img/wall1.gif");
+  left: 30%;
+  top:20%;
+  background-image:url("../img/wall1.gif");
   width: 20px;
   height: 10px;
+  position: absolute;
 
 }
